<resources>
    <string name="app_name">HandUp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tab_view">HandUp</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="profile_fragment_title">Profile</string>
    <string name="course_fragment_title">Courses</string>
    <string name="group_fragment_title">Groups</string>
    <string name="error_fragment_title">Error!</string>

    <!-- Profile fragment strings -->
    <string name="content_card_text">Content</string>
    <string name="peer_card_text">Peers</string>
    <string name="rank_card_points">Points </string>
    <string name="level">Level</string>

    <!-- Course fragment strings -->
    <string name="fragment_course_add_course">ADD COURSE</string>
    <string name="fragment_course_remove_course">REMOVE COURSE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_content_display">Content</string>
    <string name="title_activity_global">Global</string>

</resources>
